--- a/views/partials/lists/new.ejs
+++ b/views/partials/lists/new.ejs
@@ -4,7 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/stylesheets/home.css">
+    <link rel="stylesheet" href="/stylesheets/list.css">
+
+    <%- include('../nav.ejs') %>
 </head>
 <body>
-    
+    <div class="card">
+        <button type="button" id="createListButton" class="create-list-button">+</button>
+        <h1>Create a New List</h1>
+        <form action="/users/<%= user._id %>/projects/<%= projectId %>/lists" method="post">
+            <label for="listTitle">List Title:</label>
+            <input type="text" name="listTitle" id="listTitle" placeholder="Enter list title">
+
+            <label for="listText">List Description:</label>
+            <input type="text" name="listText" id="listText" placeholder="Enter list description">
+
+            <label for="listText">List Description:</label>
+            <input type="text" name="listText" id="listText" placeholder="Enter list description">
+
+            <div id="additionalFields">
+            </div>
+
+            <button type="submit">Create List</button>
+        </form>
+    </div>
+
+    <script>
+        const createListButton = document.querySelector('#createListButton');
+        const additionalFields = document.querySelector('#additionalFields');
+        let fieldNum = 3; 
+
+        createListButton.addEventListener('click', () => {
+            fieldNum++;
+
+            const field = document.createElement('div');
+            field.classList.add('field');
+
+            field.innerHTML = `
+                <label for="listText">List Description:</label>
+                <input type="text" name="listText" id="listText" placeholder="Enter list description">
+            `;
+
+            additionalFields.appendChild(field);
+        });
+    </script>
 </body>
+</html>
