--- a/views/partials/projects/show.ejs
+++ b/views/partials/projects/show.ejs
@@ -19,52 +19,57 @@
                 <% } %>
             </div>
         </section>    
-        <div class="project-details">
+            <div class="section-mid">
+                <div class="project-details">
 
-            <% const capitalizeFirstLetter = (string) => { %>
-                <% return string.charAt(0).toUpperCase() + string.slice(1); %>
-            <% };%>
-
-            <% projectDetails.forEach((project) => { %>
-                <p class="title"><%= capitalizeFirstLetter(project.title) %></p>
-                <p>Founder: <%= capitalizeFirstLetter(theLord) %></p>
-                <% project.assignedUsers.forEach((data) => { %>
-                    <p><%= capitalizeFirstLetter(data.user) %> <br> Role: <%= capitalizeFirstLetter(data.privilege) %></p>
-                <% }) %>
-                <p class="date">Project Deadline</p>
-                <p id="date-p"><%= capitalizeFirstLetter(project.dueDate) %></p>
-
-                <% if (project.assignedUsers.some(userObj => userObj.user === user.username && ['member'].includes(userObj.privilege))) { %>
-                <a href="/users/<%= user._id %>/projects/<%= project._id %>/lists/new" class="link-list">List +</a>
-                
-                <% }else if (project.assignedUsers.some(userObj => userObj.user === user.username && ['observer'].includes(userObj.privilege))) { %>
-                
-                <% } else { %>
-                    <a href="/users/<%= user._id %>/projects/<%= project._id %>/lists/new" class="link-list">List +</a>
-                    <div class="card-buttons">
-                        <a href="/users/<%= user._id %>/projects/<%= project._id %>/edit" class="edit-link">Edit</a>
-                        <form action="/users/<%= user._id %>/projects/<%= project._id %>?_method=DELETE" method="post">
-                            <button type="submit">Delete</button>
-                        </form>
-                    </div>
-                <%}%>
-            <% })%>      
-        </div>        
-        </section>
+                    <% const capitalizeFirstLetter = (string) => { %>
+                        <% return string.charAt(0).toUpperCase() + string.slice(1); %>
+                    <% };%>
+        
+                    <% projectDetails.forEach((project) => { %>
+                        <p class="title"><%= capitalizeFirstLetter(project.title) %></p>
+                        <p>Founder: <%= capitalizeFirstLetter(theLord) %></p>
+                        <% project.assignedUsers.forEach((data) => { %>
+                            <p><%= capitalizeFirstLetter(data.user) %> <br> Role: <%= capitalizeFirstLetter(data.privilege) %></p>
+                        <% }) %>
+                        <p class="date">Project Deadline</p>
+                        <p id="date-p"><%= capitalizeFirstLetter(project.dueDate) %></p>
+        
+                        <% if (project.assignedUsers.some(userObj => userObj.user === user.username && ['member'].includes(userObj.privilege))) { %>
+                        <a href="/users/<%= user._id %>/projects/<%= project._id %>/lists/new" class="link-list">List +</a>
+                        
+                        <% }else if (project.assignedUsers.some(userObj => userObj.user === user.username && ['observer'].includes(userObj.privilege))) { %>
+                        
+                        <% } else { %>
+                            <a href="/users/<%= user._id %>/projects/<%= project._id %>/lists/new" class="link-list">List +</a>
+                            <div class="card-buttons">
+                                <a href="/users/<%= user._id %>/projects/<%= project._id %>/edit" class="edit-link">Edit</a>
+                                <form action="/users/<%= user._id %>/projects/<%= project._id %>?_method=DELETE" method="post">
+                                    <button type="submit">Delete</button>
+                                </form>
+                            </div>
+                        <%}%>
+                    <% })%>      
+                </div>
+            </div>    
+    
         <section>
             <div class="section-right">
-                <% projectDetails.forEach((project) => { %>
-                    <%=console.log(project)%>
-                    <%let list = project.lists || []; %> 
-                    <% list.forEach((listItem) => { %>
-                        <%=listItem.listTitle%>
-                        <% listItem.listText.forEach((text) => { %>
-                            <%=text%>
+                <div class="card-list-display">
+                    <% projectDetails.forEach((project) => { %>
+                        <%let list = project.lists || []; %> 
+                        <% list.forEach((listItem) => { %>
+                            <h3><%=listItem.listTitle%></h3>
+                            <% listItem.listText.forEach((text) => { %>
+                                <p><%=text%></p>
+                            <% }) %>
                         <% }) %>
-
                     <% }) %>
-
-                <% }) %>
+                    <a href="">Edit</a>
+                    <form action="" method="post">
+                        <button type="submit">Delete</button>
+                    </form>
+                </div>
             </div>
         </section>
     </main>
