--- a/public/stylesheets/project-show-page.css
+++ b/public/stylesheets/project-show-page.css
@@ -167,13 +167,14 @@
     align-items: center;
     justify-content: flex-start;
     gap: 10px;
+    margin-top: 6px;
 }
 
 .buttons a {
     background-color: #007bff;
     color: white;
     text-align: center;
-    padding: 8px 12px;
+    padding: 4px 6px;
     border-radius: 5px;
     text-decoration: none;
     transition: background-color 0.3s ease;
@@ -188,7 +189,7 @@
     color: white;
     border: none;
     border-radius: 5px;
-    padding: 8px 12px;
+    padding: 4px 6px;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
