--- a/views/partials/projects/edit.ejs
+++ b/views/partials/projects/edit.ejs
@@ -20,7 +20,7 @@
             </div>
         </section>
         <section>
-            <div class="section-mid">
+            <div class="section-mid-edit">
                 <div class="section-right-create">
                     <form method="POST" action="/users/<%= user._id%>/projects/<%=project._id%>?_method=PUT">
             
