--- a/views/partials/projects/new.ejs
+++ b/views/partials/projects/new.ejs
@@ -10,7 +10,7 @@
 
             <div class="field">
                 <label for="title">Project Title</label>
-                <input type="text" id="title" name="title" required>
+                <input type="text" id="title" name="title" required maxlength="20">
             </div>
             <div class="field date-field">
                 <p><label for="dueDate">Project Deadline</label></p>
