Fixed the user sign-in input length

--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -11,11 +11,11 @@
         
         <!-- USERNAME -->
         <label for="username">Username</label>
-        <input type="text" name="username" id="username" required>
+        <input type="text" name="username" id="username" required maxlength="20">
 
         <!-- PASSWORD -->
         <label for="password">Password</label>
-        <input type="password" name="password" id="password" required>
+        <input type="password" name="password" id="password" required maxlength="20">
         
         <p><%= loginFailed %></p>
         <button type="submit">Sign In</button>
