--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -11,7 +11,7 @@
         
         <!-- USERNAME -->
         <label for="username">Username</label>
-        <input type="text" name="username" id="username" required>
+        <input type="text" name="username" id="username" required maxlength="20">
         <p><%= userTaken %></p>
 
         <!-- PASSWORD -->
